--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1055,6 +1055,49 @@ a {
 .cid-szTtkxxEEp .mbr-section-btn {
   color: #ffffff;
 }
+.cid-sXURaJoLt8 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #000000;
+}
+.cid-sXURaJoLt8 .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sXURaJoLt8 h2,
+.cid-sXURaJoLt8 h4,
+.cid-sXURaJoLt8 p {
+  margin: 0;
+}
+@media (max-width: 992px) {
+  .cid-sXURaJoLt8 .col-md-6 {
+    width: 100%;
+  }
+}
+.cid-sXURaJoLt8 .mbr-section-head {
+  margin-bottom: 2rem;
+}
+@media (min-width: 993px) {
+  .cid-sXURaJoLt8 .mbr-section-head {
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 992px) {
+  .cid-sXURaJoLt8 .mbr-section-head {
+    text-align: center;
+  }
+}
+.cid-sXURaJoLt8 .mbr-section-title {
+  color: #ee0b0b;
+  margin-bottom: 1rem;
+}
+.cid-sXURaJoLt8 .mbr-section-subtitle {
+  color: #14f708;
+  margin-bottom: 6px;
+}
+.cid-sXURaJoLt8 .mbr-text {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-szTx34U6Pl {
   padding-top: 2rem;
   padding-bottom: 2rem;
