--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1055,48 +1055,27 @@ a {
 .cid-szTtkxxEEp .mbr-section-btn {
   color: #ffffff;
 }
-.cid-sXURaJoLt8 {
+.cid-tbvXDwapyG {
   padding-top: 6rem;
   padding-bottom: 6rem;
   background-color: #000000;
 }
-.cid-sXURaJoLt8 .video-wrapper iframe {
+.cid-tbvXDwapyG .image-wrap img {
   width: 100%;
 }
-.cid-sXURaJoLt8 h2,
-.cid-sXURaJoLt8 h4,
-.cid-sXURaJoLt8 p {
-  margin: 0;
-}
-@media (max-width: 992px) {
-  .cid-sXURaJoLt8 .col-md-6 {
-    width: 100%;
+@media (min-width: 992px) {
+  .cid-tbvXDwapyG .image-wrap img {
+    display: block;
+    margin: auto;
+    width: 50%;
   }
 }
-.cid-sXURaJoLt8 .mbr-section-head {
-  margin-bottom: 2rem;
-}
-@media (min-width: 993px) {
-  .cid-sXURaJoLt8 .mbr-section-head {
-    margin-bottom: 0;
-  }
-}
-@media (max-width: 992px) {
-  .cid-sXURaJoLt8 .mbr-section-head {
-    text-align: center;
-  }
-}
-.cid-sXURaJoLt8 .mbr-section-title {
-  color: #ee0b0b;
-  margin-bottom: 1rem;
-}
-.cid-sXURaJoLt8 .mbr-section-subtitle {
+.cid-tbvXDwapyG .mbr-section-title {
   color: #14f708;
-  margin-bottom: 6px;
 }
-.cid-sXURaJoLt8 .mbr-text {
+.cid-tbvXDwapyG .mbr-text,
+.cid-tbvXDwapyG .mbr-section-btn {
   color: #ffffff;
-  text-align: center;
 }
 .cid-szTx34U6Pl {
   padding-top: 2rem;
